methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:3: error: not found: value rushDown
    left();forward();rushDown()brushUp();ackward()
                     ^PictureMono1:3: error: not found: value ackward
    left();forward();rushDown()brushUp();ackward()
                                         ^PictureMono1:4: error: not found: value rushDown
    right ;forward();rushDown();rushUp();ackward()
                     ^PictureMono1:4: error: not found: value rushUp
    right ;forward();rushDown();rushUp();ackward()
                                ^PictureMono1:4: error: not found: value ackward
    right ;forward();rushDown();rushUp();ackward()
                                         ^PictureMono1:5: error: not found: value rushDown
    forward();rushDown();rushUp();ackward()
              ^PictureMono1:5: error: not found: value rushUp
    forward();rushDown();rushUp();ackward()
                         ^PictureMono1:5: error: not found: value ackward
    forward();rushDown();rushUp();ackward()
                                  ^