methods.picture.PictureMono1.scala.code
override def run() {
  def makeV() {
    left();forward();rushDown()brushUp();ackward()
    right ;forward();rushDown();rushUp();ackward()
    forward();rushDown();rushUp();ackward()
  }
  
}